User Chat: Implemented video calling, stripe pay and send grid email.

--- a/WebApp/Views/Doctor/DoctorTimings.cshtml
+++ b/WebApp/Views/Doctor/DoctorTimings.cshtml
@@ -100,8 +100,12 @@
 
           });
 
+            try {
+                $.material.init();
+            } catch (e) {
 
-            $.material.init()
+            }
+
         });
 
 
