--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -9,15 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>@ViewBag.Title - @WebApp.Models.AppSettings.AppName</title>
-   
-     @Styles.Render("~/Content/NewCss")
+
+    @Styles.Render("~/Content/NewCss")
 
 
     @Scripts.Render("~/bundles/modernizr")
-   
+
     @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/bundles/js")
-   
+
     <style>
         body {
             background-image: url("../../Content/images/bg.jpg");
@@ -368,31 +368,95 @@
     <script src="~/signalr/hubs"></script>
     <script type="text/javascript">
 
+        // Proxy created on the fly
+        var chat = $.connection.chatHub;
+        var senderConnectionId;
+        var found = false;
+
         var availableDoctors = {
             doctor: [
                 {
                     connectionId: "",
                     firstName: "",
                     lastName: "",
-                    userName:""
+                    userName: "",
+                    docId: null
                 }
             ]
         };
 
 
+        function checkAnyDoctorAvailableNow() {
+
+            $(".clsDivDocList .clsAvailbleForCall").hide();
+            $(".clsDivDocList .clsNotAvailbleForCall").show();
+
+            $(".clsDivDocList .clsMakeCall").hide();
+
+            $(".clsDivDocList .clsAvailableSpot").hide();
+            
+
+            for (var i = 0; i < availableDoctors.doctor.length; i++) {
+                if ($(".clsDivDocList .clsMakeCall[data-doctorid = " + availableDoctors.doctor[i].docId + "]").length > 0) {
+
+                    var elem = $(".clsDivDocList .clsMakeCall[data-doctorid = " + availableDoctors.doctor[i].docId + "]");
+                    elem.show();
+
+                    elem.data("connId", availableDoctors.doctor[i].connectionId);
+
+                    elem.closest(".clsDivDocList").find(".clsNotAvailbleForCall").hide();
+                    elem.closest(".clsDivDocList").find(".clsAvailbleForCall").show();
+                    elem.closest(".clsDivDocList").find(".clsAvailableSpot").show();
+                }
+            }
+        }
+
         function getReceiverConnectionId(receiverConnectionId) {
             $("input[id$='receiverConnectionId']").val(receiverConnectionId);
         }
 
-        $(function () {
-            // Proxy created on the fly
-            var chat = $.connection.chatHub;
-            var senderConnectionId;
-            var found = false;
+        function makeCallToDoctor(e) {
+            var curElem = $(e);
+            var PatientName = "Patient";
+            //alert("calling");
 
-            chat.client.receiveMessage = function (msgFrom, msg, senderid) {
+            chat.server.sendMessageToDoctor(
+            {
+                SenderId: '@SessionHandler.UserInfo.Id',
+                UserName: '@SessionHandler.UserInfo.Email',
+                ReceiverConnectionId: curElem.data("connId"),
+                ReceiverId: '20',
+                SenderType: 'Patient',
+                Message: JSON.stringify({ status: 'call', name: PatientName }),
+                UserGroup: 'doctors'
+            });
+        }
+
+
+        $(function () {
+
+            chat.client.receiveMessage = function (msgFrom, msg, senderConnId, senderid) {
                 if (msgFrom != "ChatHub") {
-                    alert(msg);
+
+                    var msgJson = JSON.parse(msg);
+
+                    if (msgJson.status == 'Accepted') {
+                        alert("Doctor " + msgJson.name + " accepted your request please continue with payment process.");
+
+                        //Save SignalR Information to local storage so that it can be used whenever needed.
+                        var signalRInfo = {
+                            SenderId: '@SessionHandler.UserInfo.Id',
+                            UserName: '@SessionHandler.UserInfo.Email',
+                            ReceiverConnectionId: $('#ddlAvailableDoctors').val(),
+                            ReceiverId: senderid,
+                            RecipientName: msgJson.name
+                        }
+
+                        var strSignalRInfo = window.JSON.stringify(signalRInfo);
+                        localStorage.setItem('signalRInfo', strSignalRInfo);
+                    } else {
+                        alert("Sorry! Doctor " + msgJson.name + " is not available now to consultation call.");
+                    }
                 }
             };
 
@@ -403,10 +467,9 @@
                 $('#ddlAvailableDoctors').empty();
                 availableDoctors.doctor = [];
 
-
-
                 $.each(message, function (index, value) {
-                   // $('#messages').append('<li onclick=getReceiverConnectionId("' + value.ConnectionId + '");> Id: ' + value.Id + ', FirstName: ' + value.FirstName + ', LastName: ' + value.LastName + ', Logged On ' + value.Connected + ', Email: ' + value.UserName + ', ConnectionId:' + value.ConnectionId + '</li>');
+
+                    // $('#messages').append('<li onclick=getReceiverConnectionId("' + value.ConnectionId + '");> Id: ' + value.Id + ', FirstName: ' + value.FirstName + ', LastName: ' + value.LastName + ', Logged On ' + value.Connected + ', Email: ' + value.UserName + ', ConnectionId:' + value.ConnectionId + '</li>');
                     $('#ddlAvailableDoctors').append('<option value=' + value.ConnectionId + '>' + value.FirstName + ', ' + value.LastName + '---' + value.UserName + '</option>');
                     //availableDoctors.doctor.push()
 
@@ -414,16 +477,21 @@
                         connectionId: value.ConnectionId,
                         FirstName: value.FirstName,
                         LastName: value.LastName,
-                        UserName: value.UserName
+                        UserName: value.UserName,
+                        docId: value.Id
                     });
 
                 });
+
+                checkAnyDoctorAvailableNow();
+
             };
 
             // Start the connection
             $.connection.hub.start().done(function () {
                 var id = $.cookie('Id');
                 chat.server.adminJoin().done(function () {
+                    //alert("New doctor has joined... Refresh list;");
                     chat.server.getUsers();
                 });
 
@@ -436,16 +504,18 @@
                         ReceiverConnectionId: $('#ddlAvailableDoctors').val(),
                         ReceiverId: '20',
                         SenderType: 'Patient',
-                        Message: 'Calling to doctor',
+                        Message: JSON.stringify({ status: 'call', name: 'Patient' }),
                         UserGroup: 'doctors'
                     });
                     // Clear text box and reset focus for next comment.
                 });
 
+                
+
             });
         });
     </script>
-   
+
 
 
 </body>
