--- a/WebApp/Views/Doctor_Admin/Create.cshtml
+++ b/WebApp/Views/Doctor_Admin/Create.cshtml
@@ -232,7 +232,7 @@
                                                 @*<li><a class="editbtn">Delete</a> </li>*@
                                                 <li>
                                                     <input name="id" type="number" style="display:none" value="@item.doctorID">
-                                                    <input name="userid" type="number" style="display:none" value="@item.userId">
+                                                    <input name="userid" type="text" style="display:none" value="@item.userId">
                                                 </li>
                                                 <li>
                                                     <button id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
