--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -391,9 +391,12 @@
             $(".clsDivDocList .clsAvailbleForCall").hide();
             $(".clsDivDocList .clsNotAvailbleForCall").show();
 
+            $(".clsDivDocList .clsAvailableSpot").hide();
+            //$(".clsDivDocList .clsNotAvailableSpot").show();
+
             $(".clsDivDocList .clsMakeCall").hide();
 
-            $(".clsDivDocList .clsAvailableSpot").hide();
+            //$(".clsDivDocList .clsAvailableSpot").hide();
             
 
             for (var i = 0; i < availableDoctors.doctor.length; i++) {
@@ -407,6 +410,8 @@
                     elem.closest(".clsDivDocList").find(".clsNotAvailbleForCall").hide();
                     elem.closest(".clsDivDocList").find(".clsAvailbleForCall").show();
                     elem.closest(".clsDivDocList").find(".clsAvailableSpot").show();
+                   // elem.closest(".clsDivDocList").find(".clsNotAvailableSpot").hide();
+                  
                 }
             }
         }
@@ -442,7 +447,9 @@
 
                     if (msgJson.status == 'Accepted') {
                         alert("Doctor " + msgJson.name + " accepted your request please continue with payment process.");
-
+                        $('#wizard').smartWizard('goToStep', 2);
+                        $('.buttonNext').show();
+                        $('.buttonPrevious').show();
                         //Save SignalR Information to local storage so that it can be used whenever needed.
                         var signalRInfo = {
                             SenderId: '@SessionHandler.UserInfo.Id',
