--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -11,6 +11,7 @@
     @Scripts.Render("~/bundles/js")
     @Styles.Render("~/Content/NewCss")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/blockUI.js"></script>
     <script src="~/Scripts/jquery.cookie.js"></script>
     <script src="~/Scripts/jquery.signalR-2.2.1.min.js"></script>
     <!--  If this is an MVC project then use the following -->
