--- a/WebApp/Views/Doctor/DoctorTimings.cshtml
+++ b/WebApp/Views/Doctor/DoctorTimings.cshtml
@@ -69,7 +69,7 @@
                 <div class="x_content" style="display: block;" id="divDayWiseTiming">
                 </div>
 
-                </div><!-- Days -->
+            </div><!-- Days -->
         </div>
     </div>
 </div>
@@ -185,7 +185,7 @@
                 if (daywiseList[i].Timings.length > 0) {
                     for (var j = 0; j < daywiseList[i].Timings.length; j++) {
                         divHtml = divHtml + "<tr class='time_btn'>";
-                        divHtml = divHtml + "<td class='time-remove'><span>" + daywiseList[i].Timings[j].from + " To " + daywiseList[i].Timings[j].to + "</span><button class='btn btn-primary' onclick='deleteObj(" + daywiseList[i].Timings[j].doctorTimingsID + ");' type='button'>Delete</button></td>";
+                        divHtml = divHtml + "<td class='time-remove'><span>" + daywiseList[i].Timings[j].from + " To " + daywiseList[i].Timings[j].to + "</span><button class='btn btn-primary pull-right' onclick='deleteObj(" + daywiseList[i].Timings[j].doctorTimingsID + ");' type='button'>Delete</button></td>";
                         divHtml = divHtml + "</tr>";
                     }
                 }
