--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -10,7 +10,18 @@
         display: none;
     }
 </style>
-
+<style>
+    #loader {
+    border: 5px solid #0061B2;
+    border-radius: 50%;
+    border-top: 5px solid #FE0000;
+    width: 40px;
+    height: 40px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    
+}
+    </style>
 <script src="~/Scripts/Appointment/Appointment.js"></script>
 <script src="~/Scripts/HealthConditions/HealthConditions.js"></script>
 <script src="~/Scripts/Medicine/Medicine.js"></script>
@@ -777,6 +788,39 @@
         </div>
     </div>
 </div> @*end class="right_col"*@
+
+
+<script type="text/javascript">
+  //Blockui plugin...this causes the blockui to run
+  //Spinner* 
+  //Page = Sys.WebForms.PageRequestManager.getInstance();
+  //Page.add_beginRequest(OnBeginRequest);
+  //Page.add_endRequest(endRequest);
+
+  //function OnBeginRequest(sender, args) {
+  //  blockUI();
+  //}
+  //function endRequest(sender, args) {
+  //  $.unblockUI();
+  //}
+
+  //Center the element
+  //$.fn.center = function () {
+  //  this.css("position", "absolute");
+  //  this.css("top", ($(window).height() - this.height()) / 2 + $(window).scrollTop() + "px");
+  //  this.css("left", ($(window).width() - this.width()) / 2 + $(window).scrollLeft() + "px");
+  //  return this;
+  //}
+
+  //blockUI
+  function blockUI() {
+     
+    $.blockUI({
+      message: '<div id="loader"></div>',
+      });
+    $('.blockUI.blockMsg').center();
+  }//end Blockui
+</script>
 <script>
     $(document).ready(function () {
         if($("#wizard").smartWizard('currentStep','1'))
@@ -830,8 +874,7 @@
 
 
     });
-   
-    
+      
     function searchDoctor() {
         // $.blockUI({ message: "<div class='loader'></div>" });
 
@@ -845,7 +888,7 @@
         //{
         //    SearchDoctor();
         //}
-
+        blockUI();
         SearchDoctor(@ViewBag.PatienID)
         
 
