--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -420,6 +420,9 @@
         }
 
         function makeCallToDoctor(e) {
+            //var test = $(this).attr("data-doctorid");
+            //alert(test);
+            //setDoctorID(e.target.id);
             var curElem = $(e);
             var PatientName = "Patient";
             //alert("calling");
