Started implementing message feature.

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -75,10 +75,7 @@
                                 </li>
 
                                 <li class="message">
-                                    <a href="#"><img src="~/Content/images/icon_messages.png" alt=""> &nbsp <span class="menu-txt">Messages</span> </a>
-                                    <ul class="nav child_menu">
-                                        <li><a href="file.html">My Files</a></li>
-                                    </ul>
+                                    <a href="@Url.Action("Index", "Messages")"><img src="~/Content/images/icon_messages.png" alt=""> &nbsp <span class="menu-txt">Messages</span> </a>
                                 </li>
 
                                 <li class="call_history">
